<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddChildActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_child_title"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/editTextChildName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/child_name_hint"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextChildDeviceID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/child_device_id_hint"
        android:inputType="text"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/buttonSaveChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_child_button_text"/>

</LinearLayout>
